...

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <org.oppia.android.app.customview.LessonThumbnailImageView
        android:id="@+id/subtopic_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:scaleType="centerInside"
        app:entityId="@{viewModel.topicId}"
        app:entityType="@{viewModel.entityType}"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lessonThumbnail="@{viewModel.subtopic.subtopicThumbnail}" />

      <TextView
        android:id="@+id/subtopic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/oppiaBrownDark"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:maxLines="3"
...
