...
  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oppiaBackground">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/revision_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clipToPadding="false"
      android:overScrollMode="never"
      android:paddingStart="20dp"
      android:paddingTop="20dp"
...
